# linux-remote-mcp

./: .gitignore  .mcp.json  LICENSE  README.md  pyproject.toml
linux_remote/: __init__.py  __main__.py  config.py  server.py  session_manager.py
