[project]
name = "linux-remote-mcp"
version = "1.0.0"
description = "MCP Server for remote Linux machine control — SSH connection pool, command execution, file transfer, and high-level ops helpers"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "asyncssh>=2.14.0",
    "pyyaml>=6.0",
]

[project.scripts]
linux-remote-mcp = "linux_remote.server:main"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
